--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: /bio/
   - title: "Interests"
     url: /interests/
-  - title: "Projects"
-    url: /projects/
+  - title: "Reflections"
+    url: /reflections/
   # - title: "Sitemap"
   #   url: /sitemap/
